--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,27 @@
-version: '3.8'
-
 services:
   tidb:
-    image: pingcap/tidb:latest
+    image: pingcap/tidb:v7.5.0
     container_name: ridgepole-tidb-test
     ports:
       - "14000:4000"
       - "14080:10080"
-    environment:
-      - MYSQL_ROOT_PASSWORD=
     command:
-      - --store=mocktikv
+      - --store=unistore
       - --host=0.0.0.0
-      - --advertise-address=0.0.0.0
+      - --path=""
     healthcheck:
-      test: ["CMD", "sh", "-c", "nc -z 127.0.0.1 4000 || exit 1"]
+      test: ["CMD-SHELL", "timeout 1 bash -c '</dev/tcp/127.0.0.1/4000' || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 30s
+    restart: unless-stopped
 
   test:
     build: .
     depends_on:
-      - tidb
+      tidb:
+        condition: service_healthy
     environment:
       - TIDB_HOST=tidb
       - TIDB_PORT=4000
